WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66831
WebSearchableFormData crashes when given a detached HTMLFormElement
https://bugs.webkit.org/show_bug.cgi?id=66831
Summary
WebSearchableFormData crashes when given a detached HTMLFormElement
Adam Barth
Reported
2011-08-23 18:01:04 PDT
WebSearchableFormData crashes when given a detached HTMLFormElement
Attachments
Patch
(3.05 KB, patch)
2011-08-23 18:02 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(3.06 KB, patch)
2011-08-23 18:16 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-08-23 18:02:09 PDT
Created
attachment 104948
[details]
Patch
WebKit Review Bot
Comment 2
2011-08-23 18:05:08 PDT
Comment on
attachment 104948
[details]
Patch
Attachment 104948
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9480721
Adam Barth
Comment 3
2011-08-23 18:16:44 PDT
Created
attachment 104952
[details]
Patch
Dimitri Glazkov (Google)
Comment 4
2011-08-23 20:33:51 PDT
Comment on
attachment 104952
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=104952&action=review
> Source/WebKit/chromium/tests/data/form.html:1 > +<form action="about:blank" method="POST"></form>
This test is too simple!
Adam Barth
Comment 5
2011-08-23 20:35:20 PDT
(In reply to
comment #4
)
> (From update of
attachment 104952
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=104952&action=review
> > > Source/WebKit/chromium/tests/data/form.html:1 > > +<form action="about:blank" method="POST"></form> > > This test is too simple!
I could take the "method" attribute away. :)
WebKit Review Bot
Comment 6
2011-08-23 21:32:56 PDT
Comment on
attachment 104952
[details]
Patch Clearing flags on attachment: 104952 Committed
r93692
: <
http://trac.webkit.org/changeset/93692
>
WebKit Review Bot
Comment 7
2011-08-23 21:33:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug