WebSearchableFormData crashes when given a detached HTMLFormElement https://bugs.webkit.org/show_bug.cgi?id=66831

Reviewed by Dimitri Glazkov.

We need to null-check the Frame.

* src/WebSearchableFormData.cpp:
(HTMLNames::GetFormEncoding):
* tests/WebFrameTest.cpp:
(WebKit::TEST_F):
* tests/data/form.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@93692 bbb929c8-8fbe-4397-9dbb-9b2b20218538