third_party/WebKit/Source/WebKit/chromium/src/WebSearchableFormData.cpp
@@ -65,6 +65,8 @@ void GetFormEncoding(const HTMLFormElement* form, TextEncoding* encoding)
         if (encoding->isValid())
             return;
     }
+    if (!form->document()->frame())
+         return;
     *encoding = TextEncoding(form->document()->loader()->writer()->encoding());
 }
 
