third_party/WebKit/Source/WebKit/chromium/tests/WebFrameTest.cpp
@@ -31,11 +31,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "config.h"
 
-#include <googleurl/src/gurl.h>
-#include <gtest/gtest.h>
-#include <webkit/support/webkit_support.h>
+#include "WebDocument.h"
+#include "WebFormElement.h"
 #include "WebFrame.h"
 #include "WebFrameClient.h"
+#include "WebSearchableFormData.h"
 #include "WebSettings.h"
 #include "WebString.h"
 #include "WebURL.h"
@@ -43,6 +43,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebURLResponse.h"
 #include "WebView.h"
 #include "v8.h"
+#include <googleurl/src/gurl.h>
+#include <gtest/gtest.h>
+#include <webkit/support/webkit_support.h>
 
 using namespace WebKit;
 
@@ -144,6 +147,27 @@ TEST_F(WebFrameTest, FrameForEnteredContext)
                   webView->mainFrame()->firstChild()->mainWorldScriptContext()));
 
     webView->close();
+}
+
+TEST_F(WebFrameTest, FormWithNullFrame)
+{
+    registerMockedURLLoad("form.html");
+
+    TestWebFrameClient webFrameClient;
+    WebView* webView = WebView::create(0);
+    webView->initializeMainFrame(&webFrameClient);
+
+    loadFrame(webView->mainFrame(), "form.html");
+    serveRequests();
+
+    WebVector<WebFormElement> forms;
+    webView->mainFrame()->document().forms(forms);
+    webView->close();
+
+    EXPECT_EQ(forms.size(), 1U);
+
+    // This test passes if this doesn't crash.
+    WebSearchableFormData searchableDataForm(forms[0]);
 }
 
 }
